--- a/react-app/src/components/AlarmList/DeleteAlarmlistModal/DeleteAlarmlistForm.css
+++ b/react-app/src/components/AlarmList/DeleteAlarmlistModal/DeleteAlarmlistForm.css
@@ -14,5 +14,16 @@
 }
 
 .confirm-delete > p {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 5px;
+    inline-size: 500px;
+    word-break: break-all;
+    font-weight: 1000;
+}
+
+.remove-alarmlist-btn-ctn {
+    margin-bottom: 10px;
 }
