--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -22,6 +22,7 @@
     border-right: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
     overflow: scroll;
+    padding-bottom: 40px;
     /* height: 100vh; */
 }
 
